--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ p{
         height: 100vh;
         background-color: rgb(5, 5, 5);
         border-radius: 2%;
+        scale: 2;
     }
     body{
         background-color: rgb(5, 5, 5); 
