--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0.3rem;
 }
 body{
-    display: none;
+    display: flex;
     background-color: black;
     background-image: url(https://i.redd.it/i4i4iskatr5d1.png);
     background-repeat: no-repeat;
@@ -36,7 +36,7 @@ body{
         background-color: rgb(5, 5, 5); 
         height: 90vh;
         background-color: rgb(15, 15, 15);
-        display: none;
+        display: flex;
         align-items: center;
         justify-content: center;
     }
